--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@
             <a class="navbar-brand" href="#">EEG Visualizer</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="http://localhost:8000">Home</a></li>
-            <li><a href="http://localhost:8000/signal">Signal</a></li>
-            <li><a href="http://localhost:8000/spectrum">Spectrum</a></li>
-            <li><a href="http://localhost:8000/cfc">CFC</a></li>
+            <li class="active"><a href="http://localhost:{{ port }}">Home</a></li>
+            <li><a href="http://localhost:{{ port }}/signal">Signal</a></li>
+            <li><a href="http://localhost:{{ port }}/spectrum">Spectrum</a></li>
+            <li><a href="http://localhost:{{ port }}/cfc">CFC</a></li>
         </ul>
     </div>
 </nav>
