--- a/templates/signal.html
+++ b/templates/signal.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Embedding a Bokeh Server With {{ framework }}</title>
+    <title>Signal Checker</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
             <a class="navbar-brand" href="#">EEG Visualizer</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="http://localhost:8000">Home</a></li>
-            <li class="active"><a href="http://localhost:8000/signal">Signal</a></li>
-            <li><a href="http://localhost:8000/spectrum">Spectrum</a></li>
-            <li><a href="http://localhost:8000/cfc">CFC</a></li>
+            <li><a href="http://localhost:{{ port }}">Home</a></li>
+            <li class="active"><a href="http://localhost:{{ port }}/signal">Signal</a></li>
+            <li><a href="http://localhost:{{ port }}/spectrum">Spectrum</a></li>
+            <li><a href="http://localhost:{{ port }}/cfc">CFC</a></li>
         </ul>
     </div>
 </nav>
